Updating primitive Collections