@@ -51,7 +51,7 @@ run {
     inputs.property("moduleName", moduleName)
     doFirst {
         def args = jvmArgs
-        args << "--enable-preview" << "--module-path" << classpath.asPath << '--class-path' << classpath.asPath << '--module' << "$moduleName/$mainClassName".toString()
+        args << "--enable-preview" << "--module-path" << classpath.asPath << '--class-path' << classpath.asPath << '--add-exports' << 'java.base/jdk.internal.misc=io.github.joealisson.primitive' << '--module' << "$moduleName/$mainClassName".toString()
         jvmArgs = args
     }
 }
@@ -61,10 +61,12 @@ startScripts {
     doFirst {
         classpath = files()
         defaultJvmOpts = [
+                '--enable-preview',
                 '--module-path', 'APP_HOME_LIBS',
                 '--module', "$moduleName/$mainClassName",
                 '--source', sourceCompatibility,
-                '--enable-preview'
+                '--add-exports', 'java.base/jdk.internal.misc=io.github.joealisson.primitive'
+
         ]
     }
     doLast{
